--- a/src/App.css
+++ b/src/App.css
@@ -22,37 +22,42 @@
     position: absolute;
     left: 15%;
     top: 5%;
+    color: #555555;
+}
+.projects-content-div{
+    height: 100%;
 }
 .projects-content-div > p {
-    /* font-size: 2vw; */
     color: #457b9d;
     font-size: larger;
 }
-.projects-content-div-div{
+.projects-content-div-table{
     overflow-y: auto;
     color: #444444;
-    /* font-size: smaller; */
 }
-.projects-content-div-div::-webkit-scrollbar{ width: 5px }
-.projects-content-div-div::-webkit-scrollbar-track{ background-color: white;}
-.projects-content-div-div::-webkit-scrollbar-thumb{ background: #a4a4a4; }
-.projects-content-div-div::-webkit-scrollbar-thumb:hover{ background: #949494; }
-.projects-content-div-div::-webkit-scrollbar-thumb:active{ background: #545454; }
-.projects-content-div-div::-webkit-scrollbar-button{ display: none; }
-
-
-.desc{
-    display: flex;
-    flex-direction: row;
+.projects-content-div-table a{
+    text-decoration: none;
+    color: inherit;
 }
-.desc p {
-    margin: 10%;
+.projects-content-div-table a:hover{
+    color: #457b9d;
 }
-.desc-title{
-    font-weight: 600;
-    width: 35%;
+.projects-content-div-table > table{
+    width: 100%;
 }
-.desc-content{
-    width: 65%;
+.projects-content-div-table > table td{
     text-align: center;
+    padding: 0.5%;
 }
+.projects-content-div-desc{
+    height: 43vh;
+    overflow: auto;
+}
+.projects-content-div-desc::-webkit-scrollbar{ width: 5px }
+.projects-content-div-desc::-webkit-scrollbar-track{ background-color: white;}
+.projects-content-div-desc::-webkit-scrollbar-thumb{ background: #a4a4a4; }
+.projects-content-div-desc::-webkit-scrollbar-thumb:hover{ background: #949494; }
+.projects-content-div-desc::-webkit-scrollbar-thumb:active{ background: #545454; }
+.projects-content-div-desc::-webkit-scrollbar-button{ display: none; }
+
+
