--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,8 @@
     color: #555555;
 }
 .projects-content-div{
-    height: 100%;
+    height: 65vh;
+    overflow: hidden;
 }
 .projects-content-div > p {
     color: #457b9d;
